@@ -7,6 +7,7 @@ jalv (1.6.7) unstable; urgency=medium
   * Change no-menu short option to m to avoid clash with jack-name
   * Clean up and modernize code
   * Fix MSVC build
+  * Fix atom buffer alignment
   * Fix crash when running jalv without arguments
   * Fix man page headers
   * Fix memory leaks
@@ -17,7 +18,7 @@ jalv (1.6.7) unstable; urgency=medium
   * Remove Qt4 support
   * Switch to meson build system
 
- -- David Robillard <d@drobilla.net>  Mon, 08 Aug 2022 22:34:43 +0000
+ -- David Robillard <d@drobilla.net>  Mon, 08 Aug 2022 22:39:54 +0000
 
 jalv (1.6.6) stable; urgency=medium
 
